--- a/pom.xml
+++ b/pom.xml
@@ -84,5 +84,11 @@
             <version>26.0.2</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>com.github.Somebodys-home</groupId>
+            <artifactId>NMLDefenses</artifactId>
+            <version>27a0ffc837</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 </project>
