imported defensesystem and made CustomDamager work with that now

--- a/pom.xml
+++ b/pom.xml
@@ -86,6 +86,12 @@
         </dependency>
         <dependency>
             <groupId>com.github.Somebodys-home</groupId>
+            <artifactId>NMLPlayerStats</artifactId>
+            <version>02046d17f6</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.github.Somebodys-home</groupId>
             <artifactId>NMLDefenses</artifactId>
             <version>27a0ffc837</version>
             <scope>compile</scope>
